# amazonka-example

./: README.md  amazonka-example.cabal  stack.yaml
benchmarks/: Bench.hs
executables/: Main.hs
sources/: Amazonka.hs
sources/Amazonka/: Example.hs
